Fixes spacing for the X in posts

--- a/themes/moigonz/assets/sass/style.scss
+++ b/themes/moigonz/assets/sass/style.scss
@@ -105,7 +105,7 @@ a {
 
 				content: '';
 				position: absolute;
-				top: 0;
+				top: 75px;
 				left: 50%;
 				height: 1px;
 				background-color: lighten(#333, 50%);
